02_applications/photos/immich_machine-learning_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: machine-learning
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: machine-learning
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: immich-machine-learning
          image: registry.lab.reisman.org/proxy.ghcr.io/immich-app/immich-machine-learning:v1.106.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: library
              mountPath: /usr/src/app/upload/library
            - name: upload
              mountPath: /usr/src/app/upload/upload
            - name: encoded-video
              mountPath: /usr/src/app/upload/encoded-video
            - name: profile
              mountPath: /usr/src/app/upload/profile
            - name: thumbs
              mountPath: /usr/src/app/upload/thumbs
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
      volumes:
        - name: cache
          emptyDir: {}
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
        - name: encoded-video
          persistentVolumeClaim:
            claimName: immich-encoded-video
        - name: profile
          persistentVolumeClaim:
            claimName: immich-profile
        - name: thumbs
          persistentVolumeClaim:
            claimName: immich-thumbs
