02_applications/photos/immich_machine-learning_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: photos
  labels:
    app.kubernetes.io/service: immich-machine-learning
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
